# serene

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
assets/: customsearchentry.css  itemdetails.css  style.css
lib/: schema.sql
lib/engine/: app_searcher.cpp  db_manager.cpp  engine.cpp  file_searcher.cpp  hybrid_file_searcher.cpp
lib/include/: db_manager.h  engine.h  hybrid_file_searcher.h  indexer.h  result.h
src/backend/: app_searcher.cpp  app_searcher.h  file_searcher.cpp  file_searcher.h  hybrid_file_searcher.cpp  test_app_searcher.cpp  test_file_searcher.cpp  test_hybrid_file_searcher.cpp
src/components/: customsearchentry.cpp  customsearchentry.h  itemdetails.cpp  itemdetails.h  listview.cpp  listview.h  scrollview.cpp  searchentry.cpp  searchentry.h
src/core/: main.cpp  serene.cpp  spotlight.cpp  spotlight.h
src/include/: applicationobject.h  combinedlistmodel.h  customsearchentry.h  fileobject.h  itemdetails.h  listview.h  scrollview.h  serene.h
src/models/: applicationlistmodel.cpp  applicationlistmodel.h  applicationobject.cpp  applicationobject.h  combinedlistmodel.cpp  combinedlistmodel.h  fileobject.cpp  fileobject.h
src/test/: main.cpp  test_itemdetails.cpp  test_window.cpp  test_window.h
tests/: main.cpp  test_window.h
